// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchingCompletion renders prefix 1`] = `
<li>
  <!---->
   
  <a
    class="fd-menu__item"
    href="#"
  >
    <strong>
      he
    </strong>
    llo
  </a>
</li>
`;

exports[`MatchingCompletion renders remainingCompletion without prefix 1`] = `
<li>
  <!---->
   
  <a
    class="fd-menu__item"
    href="#"
  >
    <!---->
    hello
  </a>
</li>
`;
